syntax = "proto3";

package syft.lib.numpy;

import "proto/lib/torch/tensor.proto";

message NumpyProto {
  syft.lib.torch.TensorData tensor = 1;
  string dtype = 2;
}
